--- a/README.textile
+++ b/README.textile
@@ -2,13 +2,6 @@ h1.  KISSY for NodeJS
 
 nodejs-kissy 实现了将 kissy 移植到 nodeJS 上运行
 
-它依赖jsdom,htmlparser,express,connect,第一次安装请执行
-
-<pre class="console">npm install jsdom
-npm install htmlparser
-npm install express
-npm install connect</pre>
-
 h1.  通过NPM安装 nodejs-kissy
 
 需要预装 npm
@@ -39,6 +32,8 @@ S.ready(function(S){
 h1.  Using KISSY
 
 "KISSY-Calendar Demo"://gist.github.com/662117 
+
+"KISSY-Overlay Demo"://gist.github.com/1703698
 
 h1.  License
 
